<resources>
    <string name="app_name">MobileSimpleApp</string>
    <string name="task">Task</string>
    <string name="setting">Setting</string>
    <string name="hi_sam">Hi, sam!</string>
    <string name="_2_task_for_today">2 Task for today</string>
    <string name="complete">Complete</string>
    <string name="_09_00_09_30">09-00 - 09.30</string>
    <string name="daily_stand_up">Daily Stand up</string>
    <string name="_09_00">09.00</string>
    <string name="strip">_</string>
    <string name="sun_sept_14_2020">Sun, Sept 14 2020</string>
    <string name="task_list">Task List</string>
    <string name="m">M</string>
    <string name="_14">14</string>
</resources>