<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:weightSum="10"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_weight="3"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:paddingHorizontal="8dp"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/textTime"
            android:text="@string/_09_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Space android:layout_width="match_parent" android:layout_height="15dp"/>
        <TextView
            android:text="@string/strip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight="7"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="106dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="#DBE6FF"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/textItemTitle"
                android:textSize="12sp"
                android:text="@string/daily_stand_up"
                android:layout_width="wrap_content"
                android:textColor="@color/primary"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <Space android:layout_width="match_parent" android:layout_height="8dp"/>
            <TextView android:id="@+id/textItemSubtitle"
                android:textSize="10sp"
                android:text="@string/_09_00_09_30"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>
        <LinearLayout android:id="@+id/backgroundComplete"
            android:padding="8dp"
            android:layout_width="81dp"
            android:gravity="center"
            android:background="#FEEAEB"
            android:layout_height="wrap_content">
            <ImageView android:id="@+id/ivComplete"
                android:src="@drawable/ic_baseline_check_24"
                android:tint="#FB3453"
                android:layout_width="14dp"
                android:layout_height="14dp"/>
            <TextView android:id="@+id/textComplete"
                android:textSize="10sp"
                android:textColor="#FB3453"
                android:text="@string/complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>